# calpal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
api/: CLAUDE.md  Cargo.toml
api/src/: lib.rs
cli/: CLAUDE.md  Cargo.toml
cli/src/: main.rs
fixture-scraper/: CLAUDE.md  Cargo.toml
fixture-scraper/src/: arsenal.rs  arsenal_integration_tests.rs  browser.rs  browser_tests.rs  debug_browser.rs  lib.rs  parsing.rs  validation.rs
frontend/: CLAUDE.md  Cargo.toml
frontend/src/: lib.rs
