[workspace]
members = [
    "fixture-scraper",
    "api", 
    "frontend",
    "cli"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }

# HTTP and scraping
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
chromiumoxide = { version = "0.7.0", features = ["tokio-runtime"] }
futures = "0.3"

# CLI
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"

# Web framework (API)
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

# Frontend (Leptos)
leptos = { version = "0.8.5", features = ["csr"] }
leptos_axum = "0.8.5"
wasm-bindgen = "0.2.100"

# Testing
mockall = "0.13.1"

# Local packages
fixture-scraper = { path = "fixture-scraper" }