[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calpal"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
fixture-scraper = { workspace = true }