[package]
name = "fixture-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.88"
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
chromiumoxide = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }